# electronics-shop-project

./: pyproject.toml
homework-1/src/: item.py
homework-1/tests/: test_item.py
homework-4/: main.py
src/: item.py  keyboard.py  phone.py
tests/: items.csv  test_item.py  test_keyboard.py  test_phone.py
